ingress-beta.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    # use the shared ingress-nginx
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: unbelievable_host.com
    http:
      paths:
      - path: /
        backend:
          serviceName: qlik-frontend-app
          servicePort: 8081
      - path: /api/
        backend:
          serviceName: qlik-backend-app
          servicePort: 8080
