ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-myservicea
spec:
  rules:
  - http:
      paths:
      - path: /api/
        pathType: Prefix
        backend:
          service:
            name: qlik-backend-app
            port:
              number: 8080
      - path: /
        pathType: Prefix
        backend:
          service:
            name: qlik-frontend-app
            port:
              number: 8081
